--- a/package.json
+++ b/package.json
@@ -9,13 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "10.4.14",
+    "@iconify/react": "^4.1.1",
+    "@tanstack/react-query": "^4.32.0",
+    "axios": "^1.4.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "firebase": "^10.0.0",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
+    "mongodb": "^5.7.0",
     "next": "13.4.10",
-    "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "react-hook-form": "^7.45.1",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.10.1",
+    "react-spinners": "^0.13.8",
+    "react-text-modifier": "^1.0.0",
+    "sort-by": "^1.2.0",
+    "swiper": "^10.0.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "daisyui": "^3.2.1",
+    "encoding": "^0.1.13",
+    "postcss": "^8.4.26",
+    "tailwindcss": "^3.3.3"
   }
 }
