--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^4.10.1",
     "react-spinners": "^0.13.8",
     "react-text-modifier": "^1.0.0",
+    "sass": "^1.66.1",
     "sort-by": "^1.2.0",
     "swiper": "^10.0.4"
   },
